fixed image iissue on smaller screen sizes

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -37,7 +37,7 @@ body {
 .navButtons {
   font-size: 1.5rem;
   margin: 0;
-  font-family: Verdana;
+  font-family: Verdana, sans-serif;
   color: #E7ECF8;
   border: 0;
   background-color: #21264D;
@@ -51,7 +51,7 @@ body {
   height: 400px;
   position: relative;
   background-image: url("../../resources/builderimg2.png");
-  background-size: 100%;
+  background-size: cover;
   background-repeat: no-repeat;
     h1 {
       margin-top: 0;
@@ -72,7 +72,6 @@ body {
   width: 100%;
   height: 400px;
   font-size: 3rem;
-  padding: 0;
   text-align: center;
   opacity: 100%;
   margin-top: 0;
@@ -80,6 +79,12 @@ body {
   padding-top: 5%;
   padding-bottom: 5%;
 }
+
+@media screen and (max-width:710px){
+  .jumbotron {
+    height: 330px;
+    overflow: hidden;
+  }}
 
 .boostrapNavbar {
   background: #21264D;
